Make sure to notify document observers even about content that gets added to the document before StartLayout().  Block those notifications from getting passed on to the frame constructor before StartLayout(), though.  Bug 220930, r=peterv, sr=jst